--- a/Client/src/screen/Register/Register.css
+++ b/Client/src/screen/Register/Register.css
@@ -10,7 +10,7 @@
 
 
 body {
-    background-image: url(C:\AMM\SE\Gift-Basket\Client\src\screen\WebDecoPic\login-bg.jpg);
+    background-image: url(C:\AMM\SE\Gift-Basket\Client\src\screen\WebDecoPic\main-bg.jpg);
     margin: 0;
     padding: 0;
     height: 100vh;
