--- a/Client/src/screen/Login/Login.css
+++ b/Client/src/screen/Login/Login.css
@@ -10,7 +10,7 @@
 
 
 body {
-    background-image: url(C:\AMM\SE\Gift-Basket\Client\src\screen\WebDecoPic\login-bg.jpg);
+    background-image: url(C:\AMM\SE\Gift-Basket\Client\src\screen\WebDecoPic\main-bg.jpg);
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -100,6 +100,7 @@ h2 {
     color: red;
     font-size: 14px;
     padding-bottom: 10px;
+    padding-left: 4px;
 }
 
 .checkbox-container {
