--- a/Client/src/screen/Address/Edit/EditAddressForm.css
+++ b/Client/src/screen/Address/Edit/EditAddressForm.css
@@ -16,7 +16,9 @@ body {
     height: 100vh;
 }
 
-.home-container{
+
+
+.all-edit-container {
     animation: transitionIn 0.75s;
 
     display: flex;
@@ -25,56 +27,64 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    max-width: 1920px !important;
+    max-width: 720px !important;
     width: 100%;
-    max-height: 420px !important;
-    height: 100%;
+    height: 570px !important;
     background-color: #ffffff;
     transform: translate(-50%, -50%);
-
+    border-radius: 15px;
 }
 
-.home-details {
-    text-align: center;
+.edit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #81531b;
     width: 100%;
-    padding: 125px;
-    background-image: url(C:\AMM\SE\Gift-Basket\Client\src\screen\WebDecoPic\home-deco.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    isolation: isolate;
-    color: #ffffff;
+    margin-top: -16px;
 }
 
-.home-details::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+.edit-container .mb-3 {
     width: 100%;
-    height: 100%;
-    background-color: #153c73;
-    opacity: 75%;
-    z-index: -1;
-
 }
 
-.home-details .p {
-    margin-bottom: 50px;
+.edit-container .lb-1 {
+    margin-bottom: 5px;
+    font-size: 16px;
 }
 
-.main-button {
-    margin: 50px auto 0;
-    width: 30%;
+.edit-container .row {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-right: 120px;
+    padding-left: 20px;
+}
+
+.edit-container .row .col-md-6 {
+    width: 50%;
+}
+
+.edit-container input::placeholder {
+    color: #81531b7b;
+}
+
+.edit-container input:focus {
+    outline: 1px solid #ffac6c;
+    box-shadow: none;
+}
+
+
+.edit-button {
+    width: 15%;
     color: #ffffff;
     background-color: #ffac6c !important;
     border-color: transparent !important;
     display: block;
+    margin-left: auto;
     font-weight: 500;
 }
 
-.main-button:hover {
+.edit-button:hover {
     background-color: #ffdec4 !important;
     color: #81531b;
 }
