--- a/Client/src/components/item.css
+++ b/Client/src/components/item.css
@@ -1,8 +1,7 @@
 .custom-border {
     border-color: #ffac6c !important;
 }
-
-.basket-card {
+.item-card {
     color: #81531b;
     font-weight: 500;
     text-align: center;
