--- a/Client/src/screen/MakeBasket/Make/makeGiftBasket.css
+++ b/Client/src/screen/MakeBasket/Make/makeGiftBasket.css
@@ -46,7 +46,7 @@ body {
     width: 50%;
     padding: 15px;
     margin-top: 20px;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #c7c7c7;
     border-radius: 10px;
 }
 
