Clean Code And Fix EditAddress

--- a/Client/src/screen/Address/Edit/EditAddressForm.css
+++ b/Client/src/screen/Address/Edit/EditAddressForm.css
@@ -79,3 +79,21 @@
     background-color: #ffdec4 !important;
     color: #81531b;
 }
+
+.suggestion-container {
+    position: absolute;
+    z-index: 1;
+    background-color: rgb(255, 255, 255);
+    max-height: 150px;
+    overflow: auto;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+}
+
+.suggestion-option {
+    padding: 4px 8px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor:pointer;
+}
