--- a/Client/src/screen/Login/Persist.css
+++ b/Client/src/screen/Login/Persist.css
@@ -9,6 +9,15 @@
 }
 
 
+body {
+    background-image: url(D:\Code\Gift-Basket\Client\src\screen\WebDecoPic\main-bg.jpg);
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+
+
 .time-out-container {
     animation: transitionIn 0.75s;
 
